--- a/apache-jmeter-3.0/bin/jmeter.properties
+++ b/apache-jmeter-3.0/bin/jmeter.properties
@@ -526,6 +526,7 @@ log_level.jorphan=INFO
 # The commented out values are the defaults.
 
 # legitimate values: xml, csv, db.  Only xml and csv are currently supported.
+#jmeter.save.saveservice.output_format=csv
 jmeter.save.saveservice.output_format=xml
 
 
